--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ext-pcntl": "*",
         "laravel/framework": "^11.9",
         "laravel/octane": "^2.5",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "mateusjunges/laravel-kafka": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
