--- a/docker/8.3/Dockerfile
+++ b/docker/8.3/Dockerfile
@@ -1,3 +1,4 @@
+# Use a imagem base do Ubuntu 22.04
 FROM ubuntu:22.04
 
 LABEL maintainer="Taylor Otwell"
@@ -18,19 +19,23 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt-get update \
     && mkdir -p /etc/apt/keyrings \
-    && apt-get install -y gnupg gosu curl ca-certificates zip unzip git supervisor sqlite3 libcap2-bin libpng-dev python2 dnsutils librsvg2-bin fswatch ffmpeg nano  \
+    && apt-get install -y gnupg gosu curl ca-certificates zip unzip git supervisor sqlite3 libcap2-bin libpng-dev python2 dnsutils librsvg2-bin fswatch ffmpeg nano \
     && curl -sS 'https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x14aa40ec0831756756d7f66c4f4ea0aae5267a6c' | gpg --dearmor | tee /etc/apt/keyrings/ppa_ondrej_php.gpg > /dev/null \
     && echo "deb [signed-by=/etc/apt/keyrings/ppa_ondrej_php.gpg] https://ppa.launchpadcontent.net/ondrej/php/ubuntu jammy main" > /etc/apt/sources.list.d/ppa_ondrej_php.list \
     && apt-get update \
     && apt-get install -y php8.3-cli php8.3-dev \
-       php8.3-pgsql php8.3-sqlite3 php8.3-gd \
-       php8.3-curl \
-       php8.3-imap php8.3-mysql php8.3-mbstring \
-       php8.3-xml php8.3-zip php8.3-bcmath php8.3-soap \
-       php8.3-intl php8.3-readline \
-       php8.3-ldap \
-       php8.3-msgpack php8.3-igbinary php8.3-redis php8.3-swoole \
-       php8.3-memcached php8.3-pcov php8.3-imagick php8.3-xdebug \
+        php8.3-pgsql php8.3-sqlite3 php8.3-gd \
+        php8.3-curl \
+        php-pear \
+        php8.3-imap php8.3-mysql php8.3-mbstring \
+        php8.3-xml php8.3-zip php8.3-bcmath php8.3-soap \
+        php8.3-intl php8.3-readline \
+        php8.3-ldap \
+        php8.3-msgpack php8.3-igbinary php8.3-redis php8.3-swoole \
+        php8.3-memcached php8.3-pcov php8.3-imagick php8.3-xdebug \
+    && apt-get install -y librdkafka-dev \
+    && pecl install rdkafka \
+    && echo "extension=rdkafka.so" > /etc/php/8.3/cli/conf.d/20-rdkafka.ini \
     && curl -sLS https://getcomposer.org/installer | php -- --install-dir=/usr/bin/ --filename=composer \
     && curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
     && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_VERSION.x nodistro main" > /etc/apt/sources.list.d/nodesource.list \
