--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^11.9",
         "laravel/octane": "^2.5",
         "laravel/tinker": "^2.9",
-        "mateusjunges/laravel-kafka": "^2.1"
+        "mateusjunges/laravel-kafka": "^2.1",
+        "small/swoole-db": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
